# data_science_project

./: .gitignore  README.md  main.py  pyproject.toml
artifacts/metrics/: feature_importance_failure_type.csv  feature_importance_failure_within_24h.csv  model_comparison_failure_type.csv  model_comparison_failure_within_24h.csv
artifacts/model/: best_model_failure_within_24h.joblib
notebooks/: 01_eda_and_model_comparison.ipynb
src/predictive_maintenance/: __init__.py  artifacts.py  config.py  data.py  evaluate.py  explainability.py  models.py  preprocessing.py  train.py
src/predictive_maintenance/api/: __init__.py  app.py  routes.py  schemas.py  service.py
src/predictive_maintenance/dashboard/: __init__.py  app.py  eda.py  helpers.py
tests/: test_api.py  test_config.py  test_dashboard_helpers.py  test_data.py  test_evaluate.py  test_explainability.py  test_prediction_pipeline.py  test_preprocessing.py
