[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-science-project"
version = "0.1.0"
description = "Predictive maintenance MVP for EFREI M2"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115",
  "joblib>=1.4",
  "matplotlib>=3.9",
  "numpy>=2.1",
  "pandas>=2.2",
  "plotly>=6.0",
  "Pillow>=11.0",
  "reportlab>=4.2",
  "scikit-learn>=1.5",
  "streamlit>=1.44",
  "uvicorn>=0.30",
]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "nbformat>=5.10.4",
    "pytest>=8.3",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
